--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,16 @@
 @import "hotels-searching.scss";
 @import "map.scss";
 @import "page-footer.scss";
+@import "button.scss";
+@import "feature.scss";
+@import "powered-by.scss";
+@import "social-networks.scss";
+@import "form.scss";
+@import "personal-datas";
+@import "contact-information.scss";
+@import "impression.scss";
+@import "landmarks.scss";
+@import "comment.scss";
 
 
 .visually-hidden {
@@ -19,3 +29,5 @@
 .page {
   margin: 0 auto;
 }
+
+
