--- a/source/sass/reasons.scss
+++ b/source/sass/reasons.scss
@@ -27,6 +27,7 @@
   background-position: 50% top;
   background-size: 320px 36px;
   min-height: 470px;
+  display: block;
 }
 
 .reasons__item--reason-second {
@@ -82,6 +83,6 @@
   text-transform: uppercase;
   margin: 0 auto;
   text-align: center;
-  padding-bottom: 45px;
+  padding-bottom: 47px;
   width: 265px;
 }
