--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,11 @@
 @import "impression.scss";
 @import "landmarks.scss";
 @import "comment.scss";
+@import "player-controls.scss";
+@import "video-gallery.scss";
+@import "photo-promo.scss";
+@import "photo.scss";
+@import "gallery.scss";
 
 
 .visually-hidden {
@@ -29,5 +34,3 @@
 .page {
   margin: 0 auto;
 }
-
-
