--- a/source/sass/landmarks.scss
+++ b/source/sass/landmarks.scss
@@ -13,7 +13,7 @@
 
 .landmarks__title {
   padding: 0;
-  font-family: "PT Sans","Arial",sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
@@ -31,7 +31,7 @@
 .landmarks label {
   display: block;
   position: relative;
-  font-family: "PT Sans","Arial",sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 18px;
   line-height: 26px;
@@ -43,7 +43,7 @@
   content: "";
   position: absolute;
   top: -18px;
-  left: 0px;
+  left: 0;
   display: block;
   width: 22px;
   height: 22px;
