--- a/source/sass/social-networks.scss
+++ b/source/sass/social-networks.scss
@@ -11,13 +11,13 @@
 .social-networks--twitter {
   position: relative;
   display: block;
+  margin: 0;
+  padding: 0;
   width: 48px;
   height: 48px;
   padding-top: 13px;
-  color: #fff;
+  color: #ffffff;
   background-color: #81b3d2;
-  margin: 0;
-  padding: 0;
   margin-right: 5px;
 }
 
@@ -34,13 +34,13 @@
 .social-networks--fb {
   position: relative;
   display: block;
+  margin: 0;
+  padding: 0;
   width: 48px;
   height: 48px;
   padding-top: 13px;
-  color: #fff;
+  color: #ffffff;
   background-color: #81b3d2;
-  margin: 0;
-  padding: 0;
   margin-right: 5px;
 }
 
@@ -57,13 +57,13 @@
 .social-networks--youtube {
   position: relative;
   display: block;
+  margin: 0;
+  padding: 0;
   width: 48px;
   height: 48px;
   padding-top: 13px;
-  color: #fff;
+  color: #ffffff;
   background-color: #81b3d2;
-  margin: 0;
-  padding: 0;
 }
 
 .social-networks--youtube::before {
