--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -1,12 +1,18 @@
 .page-header {
   display: flex;
   flex-direction: column;
+
+  &--top {
+    display: flex;
+    order: 2;
+    justify-content: center;
+  }
 }
 
-.page-header--top {
-  display: flex;
-  order: 2;
-  justify-content: center;
+.page-header__nav__list {
+  margin: 0 auto;
+  padding: 0;
+  order: -1;
 }
 
 .page-header__toggle {
