--- a/source/sass/video-gallery.scss
+++ b/source/sass/video-gallery.scss
@@ -1,8 +1,4 @@
 .video-gallery__title {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
   margin: 0 auto;
   margin-top: 45px;
@@ -11,11 +7,8 @@
 }
 
 .video-gallery__text {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
   text-transform: uppercase;
-  color: #333333;
+  color: $darkgray;
   margin: 0 auto;
   text-align: center;
   width: 280px;
@@ -27,8 +20,8 @@
   margin: 0 auto;
   padding: 0;
   width: 320px;
-  background-color: #9fb413;
-  background-image: url("/img/video-mobile@1x.jpg");
+  background-color: $video-background;
+  background-image: url("../img/video-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% top;
   background-size: 320px 201px;
