--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -2,14 +2,10 @@
   display: block;
   margin: 0 auto;
   text-align: center;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #ffffff;
-  background-color: #81b3d2;
+  color: $white;
+  background-color: $blue;
   padding-top: 16px;
   padding-bottom: 16px;
   width: 280px;
