--- a/source/sass/comment.scss
+++ b/source/sass/comment.scss
@@ -1,9 +1,4 @@
 .comment {
-  margin: 0 auto;
-  padding: 0;
-  padding-bottom: 8px;
-  padding-left: 20px;
-  padding-right: 20px;
   border: none;
   width: 280px;
   display: flex;
@@ -12,10 +7,6 @@
 
 .comment__title {
   padding: 0;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
   text-align: center;
   margin-top: 23px;
@@ -24,24 +15,20 @@
 }
 
 .comment__text {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: #000000;
+  color: $black;
   width: 260px;
   min-height: 138px;
-  background-color: #f2f2f2;
+  background-color: $lightgray;
   border: none;
   padding-left: 20px;
   padding-top: 22px;
-}
 
-.comment__text::placeholder {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: #000000;
-  opacity: 1;
+  &::placeholder {
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    color: $black;
+    opacity: 1;
+  }
 }
