--- a/source/sass/feature.scss
+++ b/source/sass/feature.scss
@@ -6,18 +6,10 @@
 }
 
 .feature__item__title {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
 }
 
 .feature__item__text {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
   text-transform: uppercase;
-  color: #333333;
+  color: $darkgray;
 }
