--- a/source/sass/hotels-searching.scss
+++ b/source/sass/hotels-searching.scss
@@ -1,10 +1,6 @@
 .hotels-searching__title {
   padding: 0;
   margin: 0 auto;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
   text-align: center;
   margin-top: 23px;
@@ -13,12 +9,8 @@
 }
 
 .hotels-searching__text {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
   text-transform: uppercase;
-  color: #333333;
+  color: $darkgray;
   text-align: center;
   margin: 0 auto;
   margin-top: 30px;
