--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -1,10 +1,18 @@
 .page-footer__hashtag-sedona {
   display: block;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 26px;
   margin: 0 auto;
   text-align: center;
   margin-top: 40px;
+}
+
+.page-footer__powered-by {
+  margin: 0 auto;
+  margin-top: 52px;
+  margin-left: -30px;
+}
+
+.page-footer__social-networks {
+  margin: 0;
+  padding: 0;
+  margin-top: 42px;
 }
