--- a/source/sass/personal-datas.scss
+++ b/source/sass/personal-datas.scss
@@ -1,22 +1,13 @@
 .personal-datas {
-  margin: 0 auto;
-  padding: 0;
-  padding-bottom: 8px;
-  padding-left: 20px;
-  padding-right: 20px;
   border: none;
   width: 280px;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid $bordergray;
 }
 
 .personal-datas__title {
   padding: 0;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
   text-align: center;
   margin-top: 23px;
@@ -25,29 +16,22 @@
 }
 
 .personal-datas__label {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 26px;
   text-transform: uppercase;
   color: #333333;
 }
 
 .personal-datas__input {
-  background-color: #f2f2f2;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
-  color: #000000;
+  background-color: $lightgray;
+  color: $black;
   border: none;
   padding-left: 20px;
   margin-left: 16px;
   width: 170px;
   padding-top: 16px;
   padding-bottom: 16px;
-}
 
-.personal-datas__input::placeholder {
-  color: #000000;
-  opacity: 1;
+  &::placeholder {
+    color: $black;
+    opacity: 1;
+  }
 }
