--- a/source/sass/photo-promo.scss
+++ b/source/sass/photo-promo.scss
@@ -1,9 +1,8 @@
 .photo-promo {
-  background: url("/img/bg-intro-triangle-desktop.svg"), url("/img/bg-back-mobile@1x.jpg");
+  background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-color: #4478a4;
+  background-color: $backgroundblue;
   min-height: 160px;
-  margin: 0 auto;
   background-position: 50% bottom;
   text-align: center;
 }
@@ -14,10 +13,6 @@
 }
 
 .photo-promo__content {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 26px;
   text-transform: uppercase;
   margin: 0 auto;
   margin-top: 45px;
@@ -26,11 +21,8 @@
 }
 
 .photo-promo__text {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
   text-transform: uppercase;
-  color: #333333;
+  color: $darkgray;
   margin: 0 auto;
   text-align: center;
   width: 278px;
