--- a/source/sass/photo.scss
+++ b/source/sass/photo.scss
@@ -1,9 +1,8 @@
 .photo {
-  margin: 0 auto;
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid $bordergray;
 }
 
 .photo__img {
@@ -11,26 +10,15 @@
 }
 
 .photo__name {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
   text-transform: uppercase;
 }
 
 .photo__author {
   display: block;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 24px;
-  color: #333333;
+  color: $darkgray;
   margin-bottom: 5px;
 }
 
 .photo__likes {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 24px;
   margin-bottom: 5px;
 }
