--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,25 +1,18 @@
 .site-list {
-  margin: 0 auto;
-  padding: 0;
   display: flex;
   flex-direction: column;
   list-style: none;
   text-align: center;
-  order: -1;
 }
 
 .site-list__item {
-  background-color: #81b3d2;
-  border-bottom: 1px solid #678fa8;
-  border-top: 1px solid #9ac2db;
+  background-color: $blue;
+  border-bottom: 1px solid $border-bottom;
+  border-top: 1px solid $border-top;
 }
 
 .site-list__item-link {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 40px;
-  color: #ffffff;
+  color: $white;
   text-decoration: none;
   text-transform: uppercase;
 }
