--- a/source/sass/social-networks.scss
+++ b/source/sass/social-networks.scss
@@ -3,72 +3,69 @@
   flex-wrap: wrap;
   justify-content: center;
   list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-top: 42px;
-}
 
-.social-networks--twitter {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 48px;
-  height: 48px;
-  color: #ffffff;
-  background-color: #81b3d2;
-  margin-right: 5px;
-}
+  &--twitter {
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 48px;
+    height: 48px;
+    color: $white;
+    background-color: $blue;
+    margin-right: 5px;
 
-.social-networks--twitter::before {
-  content: "";
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  width: 26px;
-  height: 20px;
-  background: url("/img/icon-twitter.svg") no-repeat;
-}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 16px;
+      left: 16px;
+      width: 26px;
+      height: 20px;
+      background: url("../img/icon-twitter.svg") no-repeat;
+    }
+  }
 
-.social-networks--fb {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 48px;
-  height: 48px;
-  color: #ffffff;
-  background-color: #81b3d2;
-  margin-right: 5px;
-}
+  &--fb {
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 48px;
+    height: 48px;
+    color: $white;
+    background-color: $blue;
+    margin-right: 5px;
 
-.social-networks--fb::before {
-  content: "";
-  position: absolute;
-  top: 13px;
-  left: 19px;
-  width: 26px;
-  height: 20px;
-  background: url("/img/icon-facebook.svg") no-repeat;
-}
+    &::before {
+      content: "";
+      position: absolute;
+      top: 13px;
+      left: 19px;
+      width: 26px;
+      height: 20px;
+      background: url("../img/icon-facebook.svg") no-repeat;
+    }
+  }
 
-.social-networks--youtube {
-  position: relative;
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 48px;
-  height: 48px;
-  color: #ffffff;
-  background-color: #81b3d2;
-}
+  &--youtube {
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 48px;
+    height: 48px;
+    color: $white;
+    background-color: $blue;
 
-.social-networks--youtube::before {
-  content: "";
-  position: absolute;
-  top: 16px;
-  left: 15px;
-  width: 26px;
-  height: 20px;
-  background: url("/img/icon-youtube.svg") no-repeat;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 16px;
+      left: 15px;
+      width: 26px;
+      height: 20px;
+      background: url("../img/icon-youtube.svg") no-repeat;
+    }
+  }
 }
