--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "text.scss";
 @import "page.scss";
 @import "page-header.scss";
+@import "page-header-nav.scss";
 @import "site-list.scss";
 @import "page-main.scss";
 @import "promo.scss";
