--- a/source/sass/page.scss
+++ b/source/sass/page.scss
@@ -1,3 +1,10 @@
 .page {
   margin: 0 auto;
 }
+
+@media (min-width: 768px) {
+  .page__footer {
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+}
