--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   list-style: none;
   text-align: center;
+  width: 100%;
 }
 
 .site-list__item {
@@ -15,4 +16,39 @@
   color: $white;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.site-list--left {
+  order: -1;
+}
+
+@media (min-width: 768px) {
+ .site-list {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 40%;
+  }
+
+  .site-list__item {
+    background-color: $white;
+    border: none;
+    width: 40%;
+  }
+
+  .site-list__item-link {
+    color: $black;
+    font-size: 14px;
+    line-height: 26px
+  }
+
+  .site-list--left {
+    order: -1;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .site-list--right {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 }
