--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,17 +2,22 @@
 @import "scaffolding.scss";
 @import "text.scss";
 @import "page.scss";
+@import "logo.scss";
 @import "page-header.scss";
 @import "page-header-nav.scss";
 @import "site-list.scss";
 @import "page-main.scss";
+@import "page-main-header.scss";
+@import "page-main-content.scss";
 @import "promo.scss";
-@import "reasons.scss";
+@import "reasons-list.scss";
+@import "reasons-without-photo.scss";
+@import "reason.scss";
+@import "features.scss";
 @import "hotels-searching.scss";
 @import "map.scss";
 @import "page-footer.scss";
 @import "button.scss";
-@import "feature.scss";
 @import "powered-by.scss";
 @import "social-networks.scss";
 @import "page-form.scss";
