--- a/source/sass/map.scss
+++ b/source/sass/map.scss
@@ -2,4 +2,24 @@
   margin: 0 auto;
   text-align: center;
   margin-top: 49px;
+  background-image: url("../img/bg-map-mobile@1x.jpg");
+  background-size: 320px 350px;
+  background-position: 50% bottom;
+  background-repeat: no-repeat;
+  min-height: 350px;
+}
+
+@media (min-width: 768px) {
+  .map {
+    background-image: url("../img/bg-map-tablet@1x.jpg");
+    background-size: 768px 350px;
+    margin-top: 58px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .map {
+    background-image: url("../img/bg-map-desktop@1x.jpg");
+    background-size: 1200px 350px;
+  }
 }
