--- a/source/sass/powered-by.scss
+++ b/source/sass/powered-by.scss
@@ -1,7 +1,7 @@
 .powered-by {
-  display: block;
+  display: flex;
   text-transform: uppercase;
-  text-align: center;
+  justify-content: center;
 }
 
 .powered-by__link {
@@ -11,6 +11,7 @@
   &::before {
     content: "";
     position: absolute;
+    top: -5px;
     left: -30px;
     width: 28px;
     height: 34px;
