--- a/source/sass/promo.scss
+++ b/source/sass/promo.scss
@@ -9,13 +9,38 @@
 
 .promo__img {
   margin: 0 auto;
-  margin-top: 90px;
+  padding-top: 65px;
+  background: url("../img/text-sedona-index.svg");
+  background-repeat: no-repeat;
+  background-size: 280px 210px;
+  background-position: 50% bottom;
+  min-height: 210px;
 }
 
-.promo__content {
-  text-transform: uppercase;
-  margin: 0 auto;
-  margin-top: 45px;
-  text-align: center;
-  width: 255px;
+@media (min-width: 768px) {
+  .promo {
+    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-color: $backgroundblue;
+    min-height: 518px;
+    background-position: 50% bottom;
+    text-align: center;
+    width: 768px;
+  }
+  .promo__img {
+    background-size: 460px 340px;
+    padding-top: 210px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .promo {
+    background: url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-color: $backgroundblue;
+    min-height: 518px;
+    background-position: 50% bottom;
+    text-align: center;
+    width: 1200px;
+  }
 }
