--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,5 +1,6 @@
 .site-list {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   list-style: none;
   text-align: center;
@@ -23,7 +24,7 @@
 }
 
 @media (min-width: 768px) {
- .site-list {
+  .site-list {
     flex-direction: row;
     justify-content: space-around;
     width: 40%;
@@ -38,7 +39,7 @@
   .site-list__item-link {
     color: $black;
     font-size: 14px;
-    line-height: 26px
+    line-height: 26px;
   }
 
   .site-list--left {
