--- a/source/sass/hotels-searching.scss
+++ b/source/sass/hotels-searching.scss
@@ -18,12 +18,11 @@
 }
 
 @media (min-width: 768px) {
-
   .hotels-searching__title {
-   font-size: 30px;
-   line-height: 26px;
-   margin-top: 0px;
-   padding-top: 25px;
+    font-size: 30px;
+    line-height: 26px;
+    margin-top: 0;
+    padding-top: 25px;
   }
 
   .hotels-searching__text {
