--- a/source/sass/contact-information.scss
+++ b/source/sass/contact-information.scss
@@ -1,7 +1,7 @@
 .contact-information {
   border: none;
-  width: 280px;
   display: flex;
+  width: 280px;
   flex-direction: column;
   border-bottom: 1px solid $bordergray;
 }
@@ -34,5 +34,32 @@
   &::placeholder {
     color: $black;
     opacity: 1;
+  }
+}
+
+@media (min-width: 768px) {
+  .contact-information {
+    width: 648px;
+    border-top: 1px solid $bordergray;
+    border-bottom: none;
+  }
+
+  .contact-information__input {
+    width: 648px;
+  }
+
+  .contact-information__title {
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .contact-information {
+    width: 940px;
+    flex-direction: row;
+  }
+
+  .contact-information__input {
+    width: 270px;
   }
 }
