--- a/source/sass/player-controls.scss
+++ b/source/sass/player-controls.scss
@@ -13,8 +13,7 @@
   left: 0;
   width: 280px;
   min-height: 45px;
-  background-color: $black;
-  opacity: 0.7;
+  background-color: $blacktrans;
 
   &::before {
     content: "";
@@ -64,4 +63,34 @@
   width: 33px;
   margin-top: 25px;
   margin-left: 35px;
+}
+
+@media (min-width: 768px) {
+  .player-controls__bar {
+    left: -184px;
+    width: 648px;
+    min-height: 93px;
+    top: -93px;
+
+    &::before {
+      width: 387px;
+      left: 125px;
+    }
+
+    &::after {
+      left: 233px;
+      top: 47%;
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .player-controls__bar {
+    left: -260px;
+    width: 800px;
+
+    &::before {
+      width: 540px;
+    }
+  }
 }
