--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,7 +2,9 @@ $white: #ffffff;
 $blue: #81b3d2;
 $lightgray: #f2f2f2;
 $gray: #eeeeee;
+$gray2: #eaeaea;
 $black: #000000;
+$blacktrans: rgba(0, 0, 0, 0.5);
 $bordergray:#e5e5e5;
 $darkgray: #333333;
 $backgroundblue: #4478a4;
