--- a/source/sass/video-gallery.scss
+++ b/source/sass/video-gallery.scss
@@ -1,7 +1,7 @@
 .video-gallery__title {
   text-transform: uppercase;
   margin: 0 auto;
-  margin-top: 45px;
+  padding-top: 45px;
   text-align: center;
   width: 320px;
 }
@@ -25,4 +25,31 @@
   background-repeat: no-repeat;
   background-position: 50% top;
   background-size: 320px 201px;
+}
+
+@media (min-width: 768px) {
+  .video-gallery__text {
+    width: 375px;
+  }
+
+  .video-gallery__clip {
+    min-height: 500px;
+    background-image: url("../img/video-tablet@1x.jpg");
+    width: 648px;
+    background-size: 648px 500px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .video-gallery {
+    width: 1200px;
+    margin: 0 auto;
+    background-color: $white;
+  }
+
+  .video-gallery__clip {
+    background-image: url("../img/video-desktop@1x.jpg");
+    width: 800px;
+    background-size: 800px 500px;
+  }
 }
