Добавляет модальные окна

--- a/source/sass/impression.scss
+++ b/source/sass/impression.scss
@@ -23,7 +23,7 @@
   display: block;
   position: relative;
   padding-left: 70px;
-  margin-bottom: 13px;
+  padding-bottom: 30px;
 
   &::before {
     content: "";
