--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,3 +32,5 @@
 @import "photo-promo.scss";
 @import "photo.scss";
 @import "gallery.scss";
+@import "modal-fail.scss";
+@import "modal-success.scss";
