--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,7 @@ $blue: #81b3d2;
 $lightgray: #f2f2f2;
 $gray: #eeeeee;
 $gray2: #eaeaea;
+$shadowgray: #adb1b9;
 $black: #000000;
 $blacktrans: rgba(0, 0, 0, 0.5);
 $bordergray:#e5e5e5;
