--- a/source/sass/comment.scss
+++ b/source/sass/comment.scss
@@ -3,6 +3,7 @@
   width: 280px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .comment__title {
@@ -35,9 +36,8 @@
 
 @media (min-width: 768px) {
   .comment {
-    width: 768px;
     border-top: 1px solid $bordergray;
-    align-items: center;
+    margin: 0 auto;
   }
 
   .comment__title {
